feat: add basic paste to form feature

--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                                             <tr class="table__row">
                                                 <td class="table__cell">
                                                     <h4 class="text text--entity">Lena Silvo</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                                    <p class="text text--date text--swift">1234567890</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon icon--button">
+                                                    <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
@@ -262,10 +262,10 @@
                                             <tr class="table__row">
                                                 <td class="table__cell">
                                                     <h4 class="text text--entity">Owen Chapman</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                                    <p class="text text--date text--swift">2345678910</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon icon--button">
+                                                    <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
@@ -273,10 +273,10 @@
                                             <tr class="table__row">
                                                 <td class="table__cell">
                                                     <h4 class="text text--entity">Garry Green</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                                    <p class="text text--date text--swift">3456789120</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon icon--button">
+                                                    <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
@@ -284,10 +284,10 @@
                                             <tr class="table__row">
                                                 <td class="table__cell">
                                                     <h4 class="text text--entity">Arthur Popov</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                                    <p class="text text--date text--swift">4567891230</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon icon--button">
+                                                    <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
@@ -295,10 +295,10 @@
                                             <tr class="table__row">
                                                 <td class="table__cell">
                                                     <h4 class="text text--entity">Quentin Cooper</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                                    <p class="text text--date text--swift">5678912340</p>
                                                 </td>
                                                 <td class="table__cell table__cell--right">
-                                                    <button class="icon icon--button">
+                                                    <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
