feat: create swift component

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="table">
-                                        <tbody>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Lena Silvo</h4>
-                                                    <p class="text text--date">0123456789</p>
+                                        <tbody class="table__body">
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Lena Silvo</h4>
+                                                    <p class="swift__code">0123456789</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button">
                                                         <img class="icon__image" src="/src/assets/images/trash.svg" alt="delete icon">
                                                     </button>
@@ -247,57 +247,57 @@
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="table">
-                                        <tbody>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Lena Silvo</h4>
-                                                    <p class="text text--date text--swift">1234567890</p>
+                                        <tbody class="table__body">
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Lena Silvo</h4>
+                                                    <p class="swift__code">1234567890</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Owen Chapman</h4>
-                                                    <p class="text text--date text--swift">2345678910</p>
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Owen Chapman</h4>
+                                                    <p class="swift__code text--swift">2345678910</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Garry Green</h4>
-                                                    <p class="text text--date text--swift">3456789120</p>
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Garry Green</h4>
+                                                    <p class="swift__code text--swift">3456789120</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Arthur Popov</h4>
-                                                    <p class="text text--date text--swift">4567891230</p>
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Arthur Popov</h4>
+                                                    <p class="swift__code text--swift">4567891230</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="table__row">
-                                                <td class="table__cell">
-                                                    <h4 class="text text--entity">Quentin Cooper</h4>
-                                                    <p class="text text--date text--swift">5678912340</p>
+                                            <tr class="swift">
+                                                <td class="swift__section">
+                                                    <h4 class="swift__name">Quentin Cooper</h4>
+                                                    <p class="swift__code text--swift">5678912340</p>
                                                 </td>
-                                                <td class="table__cell table__cell--right">
+                                                <td class="swift__section swift__section--align-right">
                                                     <button class="icon icon--button icon--paste-to-form">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
