fix:: fix some issues

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <div class="form__row form__row--margin">
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="transfer-amount-input">Montant du transfert</label>
-                                    <input class="form__input" type="text" name="transfer-amount" placeholder="Entrer le montant du transfert" id="transfer-amoun-input">
+                                    <input class="form__input" type="text" name="transfer-amount" placeholder="Entrer le montant du transfert" id="transfer-amount-input">
                                 </div>
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="transfer-swift-input">Code SWIFT du déstinataire</label>
@@ -240,65 +240,65 @@
                             <button class="form__button form__button--primary form__button--half" type="submit">Transférer</button>
                         </form>
                     </section>
-                    <!-- Transfer history -->
+                    <!-- Transfer swift codes -->
                     <section class="grid__section">
                         <div class="section section--column">
-                            <h3 class="section__title">Liste des codes SWIFT</h3>
+                            <h3 class="section__title">Codes SWIFT enregistrés</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="table">
                                         <tbody class="table__body">
-                                            <tr class="swift">
+                                            <tr class="swift swift--transfer">
                                                 <td class="swift__section">
                                                     <h4 class="swift__name">Lena Silvo</h4>
-                                                    <p class="swift__code">1234567890</p>
+                                                    <p class="swift__code swift__code--transfer">1234567890</p>
                                                 </td>
                                                 <td class="swift__section swift__section--align-right">
-                                                    <button class="icon icon--button icon--paste-to-form">
+                                                    <button class="icon icon--button icon--transfer">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="swift">
+                                            <tr class="swift swift--transfer">
                                                 <td class="swift__section">
                                                     <h4 class="swift__name">Owen Chapman</h4>
-                                                    <p class="swift__code text--swift">2345678910</p>
+                                                    <p class="swift__code swift__code--transfer">2345678910</p>
                                                 </td>
                                                 <td class="swift__section swift__section--align-right">
-                                                    <button class="icon icon--button icon--paste-to-form">
+                                                    <button class="icon icon--button icon--transfer">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="swift">
+                                            <tr class="swift swift--transfer">
                                                 <td class="swift__section">
                                                     <h4 class="swift__name">Garry Green</h4>
-                                                    <p class="swift__code text--swift">3456789120</p>
+                                                    <p class="swift__code swift__code--transfer">3456789120</p>
                                                 </td>
                                                 <td class="swift__section swift__section--align-right">
-                                                    <button class="icon icon--button icon--paste-to-form">
+                                                    <button class="icon icon--button icon--transfer">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="swift">
+                                            <tr class="swift swift--transfer">
                                                 <td class="swift__section">
                                                     <h4 class="swift__name">Arthur Popov</h4>
-                                                    <p class="swift__code text--swift">4567891230</p>
+                                                    <p class="swift__code swift__code--transfer">4567891230</p>
                                                 </td>
                                                 <td class="swift__section swift__section--align-right">
-                                                    <button class="icon icon--button icon--paste-to-form">
+                                                    <button class="icon icon--button icon--transfer">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
                                             </tr>
-                                            <tr class="swift">
+                                            <tr class="swift swift--transfer">
                                                 <td class="swift__section">
                                                     <h4 class="swift__name">Quentin Cooper</h4>
-                                                    <p class="swift__code text--swift">5678912340</p>
+                                                    <p class="swift__code swift__code--transfer">5678912340</p>
                                                 </td>
                                                 <td class="swift__section swift__section--align-right">
-                                                    <button class="icon icon--button icon--paste-to-form">
+                                                    <button class="icon icon--button icon--transfer">
                                                         <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
                                                     </button>
                                                 </td>
