feat: add reference basic style and correct icons

--- a/index.html
+++ b/index.html
@@ -96,16 +96,33 @@
                                     <details class="log">
                                         <summary class="log__header">
                                             <div class="icon log__icon">
-                                                <img class="icon__image" src="/src/assets/images/food.svg" alt="food icon">
+                                                <img class="icon__image" src="/src/assets/images/police.svg" alt="food icon">
                                             </div>
                                             <div class="log__info">
                                                 <h3 class="log__entity">Los Santos Police Department</h3>
                                                 <p class="log__date">22-04-2022</p>
                                             </div>
-                                            <p class="log__amount">- 450$</p>
+                                            <p class="log__amount log__amount--down">- 450$</p>
                                         </summary>
                                         <section class="log__body">
-                                            Réference: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nesciunt. Mollitia, ab iste.
+                                            <h5 class="log__reference">Réference: </h5>
+                                            <p class="log__reference-value">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nesciunt. Mollitia, ab iste.</p>
+                                        </section>
+                                    </details>
+                                    <details class="log">
+                                        <summary class="log__header">
+                                            <div class="icon log__icon">
+                                                <img class="icon__image" src="/src/assets/images/person.svg" alt="food icon">
+                                            </div>
+                                            <div class="log__info">
+                                                <h3 class="log__entity">Owen Chapman</h3>
+                                                <p class="log__date">21-04-2022</p>
+                                            </div>
+                                            <p class="log__amount log__amount--up">+ 5060$</p>
+                                        </summary>
+                                        <section class="log__body">
+                                            <h5 class="log__reference">Réference: </h5>
+                                            <p class="log__reference-value">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, nesciunt. Mollitia, ab iste.</p>
                                         </section>
                                     </details>
                                 </div>
