feat: add confirmation for the swift delete and rework icons

--- a/index.html
+++ b/index.html
@@ -146,45 +146,60 @@
                                             <h4 class="swift__name">Lena Silvo</h4>
                                             <p class="swift__code">1234567890</p>
                                         </div>
-                                        <button class="icon icon--button swift__button">
-                                            <img class="icon__image" src="/src/assets/images/delete.svg" alt="delete icon">
-                                        </button>
+                                        <details class="swift__switch">
+                                            <summary class="swift__icon-button">
+                                                <div class="swift__icon swift__icon--delete"></div>
+                                            </summary>
+                                            <button class="swift__button">Supprimer</button>
+                                        </details>
                                     </section>
                                     <section class="swift">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Owen Chapman</h4>
                                             <p class="swift__code">2345678901</p>
                                         </div>
-                                        <button class="icon icon--button swift__button">
-                                            <img class="icon__image" src="/src/assets/images/delete.svg" alt="delete icon">
-                                        </button>
+                                        <details class="swift__switch">
+                                            <summary class="swift__icon-button">
+                                                <div class="swift__icon swift__icon--delete"></div>
+                                            </summary>
+                                            <button class="swift__button">Supprimer</button>
+                                        </details>
                                     </section>
                                     <section class="swift">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Garry Green</h4>
                                             <p class="swift__code">3456789120</p>
                                         </div>
-                                        <button class="icon icon--button swift__button">
-                                            <img class="icon__image" src="/src/assets/images/delete.svg" alt="delete icon">
-                                        </button>
+                                        <details class="swift__switch">
+                                            <summary class="swift__icon-button">
+                                                <div class="swift__icon swift__icon--delete"></div>
+                                            </summary>
+                                            <button class="swift__button">Supprimer</button>
+                                        </details>
                                     </section>
                                     <section class="swift">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Arthur Popov</h4>
                                             <p class="swift__code">4567891230</p>
                                         </div>
-                                        <button class="icon icon--button swift__button">
-                                            <img class="icon__image" src="/src/assets/images/delete.svg" alt="delete icon">
-                                        </button>
+                                        <details class="swift__switch">
+                                            <summary class="swift__icon-button">
+                                                <div class="swift__icon swift__icon--delete"></div>
+                                            </summary>
+                                            <button class="swift__button">Supprimer</button>
+                                        </details>
                                     </section>
                                     <section class="swift">
                                         <div class="swift__info">
                                             <h4 class="swift__name">Quentin Cooper</h4>
                                             <p class="swift__code">5678912340</p>
                                         </div>
-                                        <button class="icon icon--button swift__button">
-                                            <img class="icon__image" src="/src/assets/images/delete.svg" alt="delete icon">
-                                        </button>
+                                        <details class="swift__switch">
+                                            <summary class="swift__icon-button">
+                                                <div class="swift__icon swift__icon--delete"></div>
+                                            </summary>
+                                            <button class="swift__button">Supprimer</button>
+                                        </details>
                                     </section>
                                 </div>
                             </div>
@@ -286,8 +301,8 @@
                                             <h4 class="swift__name">Lena Silvo</h4>
                                             <p class="swift__code swift__code--transfer">1234567890</p>
                                         </div>
-                                        <button class="icon icon--button icon--transfer swift__button">
-                                            <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                        <button class="swift__icon-button swift__icon-button--transfer">
+                                            <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
                                     <section class="swift swift--transfer">
@@ -295,8 +310,8 @@
                                             <h4 class="swift__name">Owen Chapman</h4>
                                             <p class="swift__code swift__code--transfer">2345678901</p>
                                         </div>
-                                        <button class="icon icon--button icon--transfer swift__button">
-                                            <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                        <button class="swift__icon-button swift__icon-button--transfer">
+                                            <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
                                     <section class="swift swift--transfer">
@@ -304,8 +319,8 @@
                                             <h4 class="swift__name">Garry Green</h4>
                                             <p class="swift__code swift__code--transfer">3456789012</p>
                                         </div>
-                                        <button class="icon icon--button icon--transfer swift__button">
-                                            <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                        <button class="swift__icon-button swift__icon-button--transfer">
+                                            <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
                                     <section class="swift swift--transfer">
@@ -313,8 +328,8 @@
                                             <h4 class="swift__name">Arthur Popov</h4>
                                             <p class="swift__code swift__code--transfer">4567890123</p>
                                         </div>
-                                        <button class="icon icon--button icon--transfer swift__button">
-                                            <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                        <button class="swift__icon-button swift__icon-button--transfer">
+                                            <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
                                     <section class="swift swift--transfer">
@@ -322,8 +337,8 @@
                                             <h4 class="swift__name">Quentin Cooper</h4>
                                             <p class="swift__code swift__code--transfer">5678901234</p>
                                         </div>
-                                        <button class="icon icon--button icon--transfer swift__button">
-                                            <img class="icon__image" src="/src/assets/images/paste-form.svg" alt="paste code in form icon">
+                                        <button class="swift__icon-button swift__icon-button--transfer">
+                                            <span class="swift__icon swift__icon--transfer"></span>
                                         </button>
                                     </section>
                                 </div>
